--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.12",
     "@types/node": "^16.11.7",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
