--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start:dev": "npx ts-node index.ts"
+    "start:dev": "npx cross-env NODE_ENV=development ts-node index.ts",
+    "start:test": "npx cross-env NODE_ENV=test ts-node index.ts",
+    "start:prod": "npx cross-env NODE_ENV=production ts-node index.ts",
+    "test:e2e": "nyc jest --config jest.config.ts"
   },
   "dependencies": {
     "@commercetools/platform-sdk": "^1.19.0",
@@ -23,9 +26,20 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.5.12",
     "@types/node": "^16.11.7",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
+    "nyc": "^15.1.0",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
+  },
+  "nyc": {
+    "include": ["**/*.ts"],
+    "extension": [".ts"],
+    "require": ["ts-node/register"],
+    "reporter": ["text", "html"],
+    "sourceMap": true,
+    "instrument": true
   }
 }
