--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,5 @@ CTP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
 CTP_API_URL=https://api.us-central1.gcp.commercetools.com
 DEFAULT_CURRENCY=EUR
 ENABLE_SWAGGER=true
+GOOGLE_CLIENT_ID=147332618626-0kqbb9oakmakjeb92c3gmprbc2h74din.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
