--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ ENABLE_SWAGGER=false
 DEFAULT_CURRENCY=EUR
 GOOGLE_CLIENT_ID=147332618626-0kqbb9oakmakjeb92c3gmprbc2h74din.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+FACEBOOK_APP_ID=1098956877895526
+FACEBOOK_APP_SECRET=ecf627137dfc6603fd79203ecf02378d
