--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "pug": "2.0.0-beta11",
     "swagger-jsdoc": "^6.2.8",
