Securing Facebook and Google auth

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
 PORT=8085
+#For test purposes, this variable should be added to System environment variables
+CTP_CLIENT_ID=2eZuz7-mtrlDdtzrQ4MwbtvM
 CTP_PROJECT_KEY=commercetools-training-daniel-correa
 CTP_CLIENT_SECRET=l4Sf4zjZ0bwxK6u7w-GZhtGSg0wvtnrF
 CTP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
@@ -9,3 +11,5 @@ GOOGLE_CLIENT_ID=147332618626-0kqbb9oakmakjeb92c3gmprbc2h74din.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 FACEBOOK_APP_ID=862232155703236
 FACEBOOK_APP_SECRET=da2dc7c25f3c56534cbf90292434c31a
+FACEBOOK_INTROSPECT_URL="https://graph.facebook.com/me?fields=id,name,email&access_token="
+GOOGLE_INTROSPECT_URL="https://www.googleapis.com/oauth2/v3/tokeninfo?access_token="
