--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,5 @@ CTP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
 CTP_API_URL=https://api.us-central1.gcp.commercetools.com
 DEFAULT_CURRENCY=EUR
 ENABLE_SWAGGER=true
+FACEBOOK_INTROSPECT_URL="https://graph.facebook.com/me?fields=id,name,email&access_token="
+GOOGLE_INTROSPECT_URL="https://www.googleapis.com/oauth2/v3/tokeninfo?access_token="
