Reset password Token and Reset password endpoints. Using personal SMTP gmail server for email send PoC

--- a/.env
+++ b/.env
@@ -11,3 +11,10 @@ GOOGLE_CLIENT_ID=147332618626-0kqbb9oakmakjeb92c3gmprbc2h74din.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 FACEBOOK_APP_ID=862232155703236
 FACEBOOK_APP_SECRET=da2dc7c25f3c56534cbf90292434c31a
+#SMTP configuration Start
+#TODO Change when a non-personal SMTP is used
+SMTP_KEY=ahidjklmrfnxormg
+SMTP_USER=cocampo503@gmail.com
+SMTP_URL=smtp.gmail.com
+SMTP_PORT=465
+#SMTP configuration End
