--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,10 @@ CTP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
 CTP_API_URL=https://api.us-central1.gcp.commercetools.com
 DEFAULT_CURRENCY=EUR
 ENABLE_SWAGGER=true
+#SMTP configuration Start
+#TODO Change when a non-personal SMTP is used
+SMTP_KEY=ahidjklmrfnxormg
+SMTP_USER=cocampo503@gmail.com
+SMTP_URL=smtp.gmail.com
+SMTP_PORT=465
+#SMTP configuration End
