--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.12",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
@@ -30,6 +31,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.5.12",
     "@types/node": "^16.11.7",
+    "@types/nodemailer": "^6.4.14",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nyc": "^15.1.0",
