Using mailersend for the email PoC

--- a/.env.development
+++ b/.env.development
@@ -11,8 +11,8 @@ FACEBOOK_APP_ID=862232155703236
 FACEBOOK_APP_SECRET=da2dc7c25f3c56534cbf90292434c31a
 #SMTP configuration Start
 #TODO Change when a non-personal SMTP is used
-SMTP_KEY=ahidjklmrfnxormg
-SMTP_USER=cocampo503@gmail.com
-SMTP_URL=smtp.gmail.com
-SMTP_PORT=465
+SMTP_KEY=B2DKmQ4LLo0N2uPy
+SMTP_USER=MS_H0fjnc@trial-351ndgwk0qxgzqx8.mlsender.net
+SMTP_URL=smtp.mailersend.net
+SMTP_PORT=587
 #SMTP configuration End
