--- a/.env.test
+++ b/.env.test
@@ -7,8 +7,8 @@ DEFAULT_CURRENCY=EUR
 ENABLE_SWAGGER=true
 #SMTP configuration Start
 #TODO Change when a non-personal SMTP is used
-SMTP_KEY=ahidjklmrfnxormg
-SMTP_USER=cocampo503@gmail.com
-SMTP_URL=smtp.gmail.com
-SMTP_PORT=465
+SMTP_KEY=B2DKmQ4LLo0N2uPy
+SMTP_USER=MS_H0fjnc@trial-351ndgwk0qxgzqx8.mlsender.net
+SMTP_URL=smtp.mailersend.net
+SMTP_PORT=587
 #SMTP configuration End
