--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@commercetools/platform-sdk": "^1.19.0",
+    "@commercetools/sdk-auth": "^4.0.1",
     "@commercetools/sdk-client-v2": "^0.2.0",
     "axios": "^1.6.7",
     "cookie-parser": "~1.4.4",
